# latdder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: README.md  ci.yml  docs.yml  formatter.yml  release.yml
doc/: CONCEPTS.md  MAIN_GUIDE.md  RESOURCES.md  THEMES.md  TRIVIA_RUST_TYPES.md
ladder/: lib.rs
ladder/init/: api.rs
ladder/init/levels/: level_01.rs
ladder/toast/: api.rs  level_01.rs  level_02.rs  level_03.rs  level_05.rs
ladder/toast/levels/: level_01.rs  level_02.rs  level_03.rs  level_04.rs  level_05.rs
solutions/toast/: level_01.rs  level_02.rs  level_03.rs  level_04.rs  level_05.rs
src/: main.rs
tests/: init.rs  toast.rs
tests/init/: level_01.rs
tests/toast/: level_01.rs  level_02.rs  level_03.rs  level_04.rs  level_05.rs
