[package]
name = "latdder"
version = "0.1.0"
edition = "2024"

[lib]
name = "ladder"
path = "ladder/lib.rs"

[features]
init_level_01 = []

toast_level_01 = []
toast_level_02 = ["toast_level_01"]
toast_level_03 = ["toast_level_02"]
toast_level_04 = ["toast_level_03"]
toast_level_05 = ["toast_level_04"]
